Adding forms for adding a resource
Also, renamed all materials to resources, to unify the commands.
Commented out foreign keys to make basic implementation of forms easier.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -33,7 +33,7 @@
                        <ul class="nav">
                            <li><a href="/treasure/search" >Search</a></li> 
                            <li><a href="/treasure/history" >History</a></li> 
-                           <li><a href="/treasure/add_material" >Upload</a></li> 
+                           <li><a href="/treasure/add_resource" >Upload</a></li> 
                        </ul>
                    </div>
                    <!--/.nav-collapse -->
