Adding form to create a user

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -12,7 +12,10 @@
     <p>Track teaching resources.</p>
     
     <div class="row-fluid">
-        <p>body of text</p>
+        <p>Test links</p>
+        <ul>
+        	<li><a href="/treasure/add_teacher">Add a Teacher</a></li>
+        </ul>
     </div>
 </div>
 {% endblock %}
