--- a/django_project/templates/treasure/add_school.html
+++ b/django_project/templates/treasure/add_school.html
@@ -3,16 +3,16 @@
 {% load static %}
 
 {% block title %}
-    Upload
+    Add School
 {% endblock %}
 
 {% block body_block %}
 
 <div class="hero-unit">
-    <h1>Upload a Resource</h1>
+    <h1>Add a School</h1>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/add_resource/">
+        <form class="span6" id="upload_form" method="post" action="/treasure/add_school/">
 	
 	    {% csrf_token %}
 	    
@@ -27,7 +27,7 @@
             {% endfor %}
 
             <br/>
-            <button class="btn btn-primary" type="submit" name="submit">Upload Resource</button>
+            <button class="btn btn-primary" type="submit" name="submit">Add School</button>
         </form>
     </div>
 </div>
