--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -15,6 +15,8 @@
         <p>Test links</p>
         <ul>
         	<li><a href="/treasure/add_teacher">Add a Teacher</a></li>
+        	<li><a href="/treasure/add_hub">Add a Hub</a></li>
+        	<li><a href="/treasure/add_school">Add a School</a></li>
         </ul>
     </div>
 </div>
