Implementing user authentication when registering
Users default django auth for now.

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -14,7 +14,7 @@
     <div class="row-fluid">
         <p>Test links</p>
         <ul>
-        	<li><a href="/treasure/add_teacher">Add a Teacher</a></li>
+        	<li><a href="/treasure/register">Add a Teacher</a></li>
         	<li><a href="/treasure/add_hub">Add a Hub</a></li>
         	<li><a href="/treasure/add_school">Add a School</a></li>
         </ul>
