Can now create different types of resource

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -17,6 +17,9 @@
         	<li><a href="/treasure/register">Add a Teacher</a></li>
         	<li><a href="/treasure/add_hub">Add a Hub</a></li>
         	<li><a href="/treasure/add_school">Add a School</a></li>
+        	<li><br></li>
+        	<li><a href="/treasure/add_web_resource">Add a Web Resource</a></li>
+        	<li><a href="/treasure/add_file_resource">Add a File Resource</a></li>
         </ul>
     </div>
 </div>
