Adding pages to list all schools/hubs/resources

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -20,6 +20,10 @@
         	<li><br></li>
         	<li><a href="/treasure/add_web_resource">Add a Web Resource</a></li>
         	<li><a href="/treasure/add_file_resource">Add a File Resource</a></li>
+           	<li><br></li>
+            <li><a href="/treasure/resources">View Resources</a></li>
+            <li><a href="/treasure/schools">View Schools</a></li>
+            <li><a href="/treasure/hubs">View Hubs</a></li>
         </ul>
     </div>
 </div>
