Resources/Schools/Hubs now have their own pages
Can be easily accessed by the view pages, also when creating a thing,
the user is immediately shown the newly created things page.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -36,10 +36,10 @@
                             	<li><a href="/treasure/register">Register</a></li>      
                             {% endif %}                   
                        </ul>
-                       <ul class="nav">
+                       <!--ul class="nav">
                            <li><a href="/treasure/search" >Search</a></li> 
                            <li><a href="/treasure/history" >History</a></li> 
-                       </ul>
+                       </ul-->
                    </div>
                    <!--/.nav-collapse -->
                </div>
