Removing links for nonauthenticated user in header
Also, added some links to addding/viewing resources in header, more
still need to be added as we increase the functionality of the site.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -28,18 +28,21 @@
 
                    <div class="nav-collapse collapse">
                        <ul class="nav pull-right">
-                            <li><a href="/treasure/profile">Profile</a></li> 
                             {% if user.is_authenticated %}
+                                <li><a href="/treasure/profile">Profile</a></li> 
                             	<li><a href="/treasure/logout">Logout</a></li>
                             {% else %}
                             	<li><a href="/treasure/login">Login</a></li>
                             	<li><a href="/treasure/register">Register</a></li>      
                             {% endif %}                   
                        </ul>
-                       <!--ul class="nav">
-                           <li><a href="/treasure/search" >Search</a></li> 
-                           <li><a href="/treasure/history" >History</a></li> 
-                       </ul-->
+                       {% if user.is_authenticated %}
+                       <ul class="nav">
+                           <li><a href="/treasure/add_web_resource">Add Web Resource</a></li> 
+                           <li><a href="/treasure/add_file_resource">Add File Resource</a></li>
+                           <li><a href="/treasure/resources">View All Resources</a></li>
+                       </ul>
+                       {% endif %}
                    </div>
                    <!--/.nav-collapse -->
                </div>
