--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -4,11 +4,16 @@
 
 <html>
     <head>
-        <title>Treasure - {% block title %}Home{% endblock %}</title>
+        <title>Treasure - {% block title %}{% endblock %}</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/html5shiv.js' %}"></script><![endif]-->
+		<link href="<img src="{% static 'images/css/main.css' %}" rel="stylesheet">
+		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'sidebar/css/ie8.css' %}" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'sidebar/css/ie9.css' %}" /><![endif]-->
         <!-- Bootstrap -->
         <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
+        <link href="{% static 'sidebar/css/main.css' %}" rel="stylesheet">
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="http://getbootstrap.com/examples/sticky-footer-navbar/sticky-footer-navbar.css">
         <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
@@ -38,9 +43,8 @@
                        </ul>
                        {% if user.is_authenticated %}
                        <ul class="nav">
-                           <li><a href="/treasure/add_web_resource">Add Web Resource</a></li> 
-                           <li><a href="/treasure/add_file_resource">Add File Resource</a></li>
-                           <li><a href="/treasure/resources">View All Resources</a></li>
+                           <li><a href="/treasure/resources">Resources</a></li> 
+                           <li><a href="/treasure/about">News</a></li>
                        </ul>
                        {% endif %}
                    </div>
@@ -50,18 +54,79 @@
            </div>
         </div>
         
-        <div class="container-fluid">
-            {% block body_block %}
-            {% endblock %}
-        </div>
-        
-        <div class="footer">
+        <div>
+			<!-- Header -->
+				<div id="header">
+
+					<div class="top">
+
+						<!-- Logo -->
+                       {% if user.is_authenticated %}
+							<div id="logo">
+								<span class="image avatar48"><img src="{% static 'images/avatar.jpg' %}" alt="" /></span>
+								<h1 id="title">Nigel Clarke</h1>
+								<p>HSoG</p>
+							</div>
+	                       {% endif %}
+
+						<!-- Nav -->
+							<nav id="nav">
+								<ul>
+									{% if user.is_authenticated %}
+									<li><a href="/treasure/" id="home-link" class="skel-layers-ignoreHref"><span>Home</span></a></li>
+									<li><a href="/treasure/resources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
+									<li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>History</span></a></li>
+									<li><a href="/treasure/profile" class="skel-layers-ignoreHref"><span>User Profile</span></a></li>
+									<li><a href="#contact" class="skel-layers-ignoreHref"><span>Contact</span></a></li>
+									{% else %}
+									
+									<li><a href="/treasure/login"><span>Login</span></a></li>
+									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+									
+									{% endif %}
+			                       
+								</ul>
+							</nav>
+
+					</div>
+
+					<div class="bottom"></div>
+
+				</div>
+
+			<!-- Main -->
+				<div id="main">
+
+					<!-- Intro -->
+
+					{% if user.is_authenticated %}
+					<!-- This will be used for tracking notifications -->
+						{% block notification%}
+						{% endblock%}
+					{% endif %}
+
+					<!-- Main Page -->
+						<section id="MainPage" class="two">
+				
+							<div class="container">
+								{% block body_block%}{% endblock%}
+        					</div>
+						</section>
+        <!--div class="footer">
             <div class="container" id="foot-content">
                 <a href="/treasure/about" ><h4>About</h4></a>
             </div>
-        </div>
+        </div-->
 
         <!-- Javascript at the end, page loads faster -->
+			<script src="{% static 'sidebar/js/jquery.min.js' %}"></script>
+			<script src="{% static 'sidebar/js/jquery.scrolly.min.js' %}"></script>
+			<script src="{% static 'sidebar/js/jquery.scrollzer.min.js' %}"></script>
+			<script src="{% static 'sidebar/js/skel.min.js' %}"></script>
+			<script src="{% static 'sidebar/js/util.js' %}"></script>
+			<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/respond.min.js' %}"></script><![endif]-->
+			<script src="{% static 'sidebar/js/main.js"></script>
+		
         <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
