--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -6,10 +6,28 @@
     Home
 {% endblock %}
 
+{% block notification%}	
+<section id="top" class="one dark cover">
+	<div class="container">
+
+		<header>
+			<h2 class="alt">Welcome back, Nigel</a></h2>
+			<p>Please give back to the community by <u><a href="/treasure/resource/1">Rating XX resource</a></u> that you used recently.</p>
+		</header>
+
+		<footer>
+			<a href="#MainPage" class="button scrolly">Continue Browsing</a>
+		</footer>
+
+	</div>
+</section>
+{% endblock %}
+
+
 {% block body_block %}
 <div class="hero-unit">
-    <h1>Welcome to Treasure</h1>
-    <p>Track teaching resources.</p>
+    <h2>Welcome to Treasure</h2>
+    <p>Landing page after login will contain a summary and quick links for everything.</p>
     
     <div class="row-fluid">
     {% if user.is_authenticated %}
