Some style tweaks
Left aligned the inner text, made the input boxes automatically set their
size, removed the transparent frame behind the content, and added some
JavaScript to hide the rating box when clicked.

--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -16,7 +16,7 @@
 		</header>
 
 		<footer>
-			<a href="#MainPage" class="button scrolly">Continue Browsing</a>
+			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
 		</footer>
 
 	</div>
