--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -8,7 +8,6 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/html5shiv.js' %}"></script><![endif]-->
-		<link href="<img src="{% static 'images/css/main.css' %}" rel="stylesheet">
 		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'sidebar/css/ie8.css' %}" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'sidebar/css/ie9.css' %}" /><![endif]-->
         <!-- Bootstrap -->
@@ -17,6 +16,7 @@
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="http://getbootstrap.com/examples/sticky-footer-navbar/sticky-footer-navbar.css">
         <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
+        <link href="{% static 'css/treasure.css' %}" rel="stylesheet">
     </head>
 
     <body>
@@ -67,26 +67,23 @@
 								<h1 id="title">Nigel Clarke</h1>
 								<p>HSoG</p>
 							</div>
-	                       {% endif %}
+	                   {% endif %}
 
 						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									{% if user.is_authenticated %}
+                        <nav id="nav">
+							<ul>
+								{% if user.is_authenticated %}
 									<li><a href="/treasure/" id="home-link" class="skel-layers-ignoreHref"><span>Home</span></a></li>
 									<li><a href="/treasure/resources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
 									<li><a href="/treasure/about" class="skel-layers-ignoreHref"><span>History</span></a></li>
 									<li><a href="/treasure/profile" class="skel-layers-ignoreHref"><span>User Profile</span></a></li>
 									<li><a href="#contact" class="skel-layers-ignoreHref"><span>Contact</span></a></li>
-									{% else %}
-									
+								{% else %}									
 									<li><a href="/treasure/login"><span>Login</span></a></li>
-									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>
-									
-									{% endif %}
-			                       
-								</ul>
-							</nav>
+									<li><a href="/treasure/register" class="skel-layers-ignoreHref"><span>Register</span></a></li>									
+								{% endif %}			                       
+							</ul>
+						</nav>
 
 					</div>
 
@@ -95,23 +92,23 @@
 				</div>
 
 			<!-- Main -->
-				<div id="main">
+			<div id="main">
 
-					<!-- Intro -->
+				<!-- Intro -->
+				{% if user.is_authenticated %}
+				<!-- This will be used for tracking notifications -->
+					{% block notification%}{% endblock%}
+				{% endif %}
 
-					{% if user.is_authenticated %}
-					<!-- This will be used for tracking notifications -->
-						{% block notification%}
-						{% endblock%}
-					{% endif %}
-
-					<!-- Main Page -->
-						<section id="MainPage" class="two">
-				
-							<div class="container">
-								{% block body_block%}{% endblock%}
-        					</div>
-						</section>
+				<!-- Main Page -->
+				<section id="MainPage">
+                    <div class="container">
+                        {% block body_block%}{% endblock%}
+                    </div>
+                </section>
+                
+            </div>
+        </div>
         <!--div class="footer">
             <div class="container" id="foot-content">
                 <a href="/treasure/about" ><h4>About</h4></a>
@@ -119,15 +116,15 @@
         </div-->
 
         <!-- Javascript at the end, page loads faster -->
-			<script src="{% static 'sidebar/js/jquery.min.js' %}"></script>
-			<script src="{% static 'sidebar/js/jquery.scrolly.min.js' %}"></script>
-			<script src="{% static 'sidebar/js/jquery.scrollzer.min.js' %}"></script>
-			<script src="{% static 'sidebar/js/skel.min.js' %}"></script>
-			<script src="{% static 'sidebar/js/util.js' %}"></script>
-			<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/respond.min.js' %}"></script><![endif]-->
-			<script src="{% static 'sidebar/js/main.js"></script>
-		
+        <script src="{% static 'sidebar/js/jquery.min.js' %}"></script>
+        <script src="{% static 'sidebar/js/jquery.scrolly.min.js' %}"></script>
+        <script src="{% static 'sidebar/js/jquery.scrollzer.min.js' %}"></script>
+        <script src="{% static 'sidebar/js/skel.min.js' %}"></script>
+        <script src="{% static 'sidebar/js/util.js' %}"></script>
+        <!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/respond.min.js' %}"></script><![endif]-->
+        <script src="{% static 'sidebar/js/main.js' %}"></script>		
         <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/treasure.js' %}"></script>
     </body>
 </html>
