Updating templates to show lists properly
Changing resource/hub/schoolname to just name in line with the new
database model.

--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -17,7 +17,7 @@
         {% if resources %}
         <ul>
             {% for resource in resources %}
-            <li><a href="/treasure/resource/{{ resource.id }}">{{ resource.resourcename }}</a></li>
+            <li><a href="/treasure/resource/{{ resource.id }}">{{ resource.name }}</a></li>
             {% endfor %}
         </ul>
         {% else %}
