Updating views of resources/school/hub
Now displays the new information from the new database model.

--- a/django_project/templates/treasure/hub.html
+++ b/django_project/templates/treasure/hub.html
@@ -11,10 +11,14 @@
     <div class="row-fluid">
         {% if hub %}
             <h1>{{ hub_name }}</h1>
-            <h3>Location:</h3>
-            <p>{{ location }}</p>
+            
             <h3>Address:</h3>
-            <p>{{ address }}</p>          
+            <p>{{ address }}</p>
+            <h3>Latitude:</h3>
+            <p>{{ lat }}</p> 
+            <h3>Longitude:</h3>
+            <p>{{ lon }}</p>   
+            
         {% else %}
             No hub at this url.<br>
         {% endif %}
