--- a/django_project/static/sidebar/css/main.css
+++ b/django_project/static/sidebar/css/main.css
@@ -2379,8 +2379,9 @@
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
 				display: block;
-				height: 2.25em;
-				left: 0;
+				margin-top:-9px;
+				height:3.25em;
+				left: 93px;
 				position: fixed;
 				top: 0;
 				width: 3.25em;
