--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 
 		<header>
-			<h2 class="alt">Welcome back, Nigel</a></h2>
+			<h2 class="alt">Welcome back, {{ user_first_name }}</a></h2>
 			<p>Please give back to the community by <u><a href="/treasure/resource/1">Rating XX resource</a></u> that you used recently.</p>
 		</header>
 
