--- a/django_project/templates/treasure/profile.html
+++ b/django_project/templates/treasure/profile.html
@@ -7,12 +7,41 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="hero-unit">
-    <h1>Profile</h1>
-    <h2> users facts go here </h2><br>
-    
-    <div class="row-fluid">
-        <p>other fields go here</p>
-    </div>
-</div>
+{% if teacher %}
+	<div class="hero-unit">
+	    <h1>{{ username }}</h1>
+	    <h2> {{ user_firstname }} {{ user_surname }}</h2>
+	</div>
+	<div class="row-fluid">
+		<h3>Email:</h3>
+		<p>{{ user_email }}</p>
+		
+		{% if user_schools %}
+			<h3>Schools</h3>
+			<ul>
+			{% for school in user_schools %}
+				<li><p>{{ school }}</p></li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<h4>You are not currently part of any school.<h4>
+		{% endif %}
+		
+		{% if user_hubs %}
+			<h3>Hubs</h3>
+			<ul>
+			{% for hub in user_hubs %}
+				<li><p>{{ hub }}</p></li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<h4>You are not currently part of any hub.<h4>
+		{% endif %}
+
+	</div>
+{% else %}
+	<div class="hero-unit">
+	    <h1>There is no user!</h1>
+	</div>
+{% endif %}
 {% endblock %}
