--- a/django_project/templates/treasure/about.html
+++ b/django_project/templates/treasure/about.html
@@ -8,10 +8,10 @@
 
 {% block body_block %}
 <div class="hero-unit">
-    <h1>About Treasure</h1>
-    
+    <h3>TReaSURe</h3> 
     <div class="row-fluid">
-        <p>it does this:   ....</p>
+        <p>The repository of teaching Resources in Scotland; The EduHub</p>
     </div>
 </div>
+		<center><h6> A Quintin Cutts'® project</h6></center>
 {% endblock %}
