Profile Page now appears properly #24
Made some slight changes to the context dictionary and the templates so
that when a user has no school or hub, the correct message is shown.
Also made some tweaks to the style to make the pages more consistant
with each other.  Main changes are putting everything in hero-units (now
with less padding), and using h2 for main titles.

--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -23,6 +23,12 @@ form input[type="text"], form input[type="email"], form input[type="password"], 
     color:firebrick !important;
 }
 
+/* hide elements from display */
 .hidden {
     display:none;
+}
+
+/* Smaller padding on hero-units */
+.hero-unit{
+    padding: 40px;
 }
