--- a/django_project/templates/treasure/add_hub.html
+++ b/django_project/templates/treasure/add_hub.html
@@ -2,12 +2,14 @@
 
 {% load static %}
 
-{% block title %}Add Hub{% endblock %}
+{% block title %}
+    Add Hub
+{% endblock %}
 
 {% block body_block %}
 
 <div class="hero-unit">
-    <h1>Add a Hub</h1>
+    <h2>Add a Hub</h2>
     <br/>
     <div class="container">
         <form class="span6" id="upload_form" method="post" action="/treasure/add_hub/">
