--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -11,8 +11,8 @@
     {% if resource %}
         <div class="row-fluid">
             <div class="span8">
-                <h1>{{ resource_name}}</h1>
-                <h3>by {{ author }}</h3>
+                <h2>{{ resource_name}}</h2>
+                <h4>by {{ author }}</h4><br>
                 <h4><strong>Description:</strong></h4>
                 <p>{{ description }}</p><br>
                 <h4><strong>Tags:</strong></h4>
