--- a/django_project/templates/treasure/profile.html
+++ b/django_project/templates/treasure/profile.html
@@ -8,19 +8,14 @@
 
 {% block body_block %}
 {% if teacher %}
-	<div class="hero-title">
-	    <h3><u>Profile details</u></h3>
-	</div>
-	<div class="row-fluid">
+    <div class="hero-unit row-fluid">
+	    <h2>Profile Details</h2><br>
 		<h4>Username:</h4>
-		<p>  {{ username }}</p>
-		<p>
+		<p>  {{ username }}</p><br>
 		<h4>Full name:</h4>
-		<p>  {{ user_firstname }} {{ user_surname }}</p>
-		<p>
+		<p>  {{ user_firstname }} {{ user_surname }}</p><br>
 		<h4>Email:</h4>
-		<p>  {{ user_email }}</p>
-		<p>
+		<p>  {{ user_email }}</p><br>
 		{% if user_schools %}
 			<h4>Schools</h4>
 			<ul>
@@ -29,10 +24,9 @@
 			{% endfor %}
 			</ul>
 		{% else %}
-			<h4>You are not currently part of any school.<h4>
+			<h4>You are not currently part of any schools.<h4>
 		{% endif %}
-		
-		<p>
+		<br>
 		{% if user_hubs %}
 			<h4>Hubs</h4>
 			<ul>
@@ -41,9 +35,9 @@
 			{% endfor %}
 			</ul>
 		{% else %}
-			<h4>You are not currently part of any hub.<h4>
+			<h4>You are not currently part of any hubs.<h4>
 		{% endif %}
-
+    </div>
 	</div>
 {% else %}
 	<div class="hero-unit">
