Implementing a basic tag view/explore page #23
New pages show all resources with a given tag.  The resource page tags
link back to these.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -43,7 +43,8 @@
                        </ul>
                        {% if user.is_authenticated %}
                        <ul class="nav">
-                           <li><a href="/treasure/resources">Resources</a></li> 
+                           <li><a href="/treasure/resources">Resources</a></li>
+			   <li><a href="/treasure/explore">Explore</a></li>                        
                            <li><a href="/treasure/about">News</a></li>
                        </ul>
                        {% endif %}
