--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -19,7 +19,7 @@
                 {% if tags %}
                     <ul>
                     {% for tag in tags %}
-                        <li>{{ tag.name }}</li>
+                        <li><a href="/../treasure/explore/{{ tag.id }}">{{ tag.name }}</li>
                     {% endfor %}
                     </ul>
                 {% else %}
