--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -39,7 +39,7 @@
                     <li><a href="{{ web_resource }}">Link to Resource</a></li>
                 {% endif %}
                 {% if files_resource %}
-                    <li><a href="{{ files_resource.url }}">Download Resource</a></li>
+                    <li><a href="{{ files_resource.url }}" download>Download Resource</a></li>
                 {% endif %}
                     <li><a href="Evolve.html">Evolve</a></li>
                 </ul>
