Users can now edit their profile page #7
All data is editable on this new page

--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -52,3 +52,8 @@ color: rgba(207, 207, 207, 1);
 #logo p {
 color: rgba(198, 198, 198, 1);
 }
+
+/* removing underlined text inside buttons */
+a.btn.btn-primary {
+	text-decoration: none;
+}
