--- a/django_project/templates/treasure/profile.html
+++ b/django_project/templates/treasure/profile.html
@@ -37,8 +37,9 @@
 		{% else %}
 			<h4>You are not currently part of any hubs.<h4>
 		{% endif %}
+		<br>
+		<a class="btn btn-primary" href="/treasure/profile/edit">Edit Profile</a>
     </div>
-	</div>
 {% else %}
 	<div class="hero-unit">
 	    <h3>There is no user!</h3>
